# curves

./: Cargo.toml
bn254/: Cargo.toml
curve-benches/: Cargo.toml
grumpkin/src/: lib.rs
grumpkin/src/fields/: tests.rs
secp_256k1/: Cargo.toml
secp_256k1/src/: lib.rs
secp_256k1/src/constraints/: curves.rs  mod.rs
secp_256k1/src/curves/: mod.rs  tests.rs
secp_256k1/src/fields/: fq.rs  fr.rs  tests.rs
secq_256k1/: Cargo.toml
secq_256k1/src/: lib.rs
secq_256k1/src/constraints/: curves.rs  mod.rs
secq_256k1/src/curves/: mod.rs  tests.rs
secq_256k1/src/fields/: fq.rs  fr.rs  tests.rs
