[package]
name = "ark-secp"
version = "0.3.0"
authors = [ "Deevashwer Rathee" ]
description = "The secp prime-order elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-pallas/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
ark-std = { version = "^0.3.0", default-features = false }
k256 = { version = "^0.11.3", default-features = false, features = [ "expose-field", "arithmetic" ] }
ark-serialize = { version = "^0.3.0", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
derivative = { version = "2", features = ["use_core"] }
num-bigint = { version = "0.4", default-features = false }

[dev-dependencies]
ark-relations = { version = "^0.3.0", default-features = false }
ark-algebra-test-templates = { version = "^0.3.0", default-features = false }
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }

[features]
default = [ "curve", "r1cs", "std" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []
r1cs = [ "base_field", "ark-r1cs-std" ]